fixed margin on mobile project card

--- a/css/projects.css
+++ b/css/projects.css
@@ -63,7 +63,7 @@
     width: 100%;
     border-radius: 5px;
     transition: filter 0.5s;
-    margin: 1rem 0;
+    margin: 1rem 0 2rem 0;
     filter: contrast(50%) drop-shadow(1px 2px 4px #474747);
 }
 
@@ -73,7 +73,6 @@
     justify-content: flex-start;
 }
 .projectCard .project-btns a {
-
     margin-right: 1rem;
 }
 
@@ -122,7 +121,7 @@
 
 @media screen and (max-width:480px) {
     .projectCard {
-        margin: 1rem 0;
+        padding: 1rem;
         height: fit-content;
     }
 }
